--- a/MNO1109_Cp1.html
+++ b/MNO1109_Cp1.html
@@ -276,7 +276,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                     <p> <b>General Notes for Linesplan</b> <br>
 
                                         <figure>
-                                            <img src="CP1_SC1_FIG1.png" width="604" class="center">
+                                            <img src="img/CP1_SC1_FIG1.png" width="604" class="center">
                                         </figure>
 
 
@@ -339,7 +339,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                     <p> <b>Description of
                                             Linesplan</b><br>
                                         <figure>
-                                            <img src="CP1_SC1_FIG2.png" width="604">
+                                            <img src="img/CP1_SC1_FIG2.png" width="604">
                                         </figure>
 
                                         The <span style="color:red">projection of ships</span> can be made to <span
@@ -416,7 +416,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                     <p> <b>Description of Linesplan</b> <br>
 
                                         <figure>
-                                            <img src="CP1_SC1_FIG3.png" width="604">
+                                            <img src="img/CP1_SC1_FIG3.png" width="604">
                                         </figure>
 
                                         <span style="color:red">Sheer plane</span> is also called <span
@@ -495,7 +495,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                     <p> <b>Half-Breadth Plan</b> <br>
 
                                         <figure>
-                                            <img src="CP1_SC1_FIG4.png" width="604">
+                                            <img src="img/CP1_SC1_FIG4.png" width="604">
                                         </figure>
 
 
@@ -569,7 +569,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
 
                                     <p> <b>Body Plan</b><br>
                                         <figure>
-                                            <img src="CP1_SC1_FIG5.png" width="604">
+                                            <img src="img/CP1_SC1_FIG5.png" width="604">
                                         </figure>
 
                                         The <span style="color:blue">body plan</span> represents the <span
@@ -650,7 +650,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                     <p> <b>Various Coefficient</b> <br>
 
                                         <figure>
-                                            <img src="CP1_SC2_FIG1.png" width="604">
+                                            <img src="img/CP1_SC2_FIG1.png" width="604">
                                         </figure>
 
                                         <span style="color:red">Coefficients of Hull Form</span>
@@ -709,7 +709,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                     <p> <b>Midship Area Coefficient</b> <br>
 
                                         <figure>
-                                            <img src="CP1_SC2_FIG2.png" width="604">
+                                            <img src="img/CP1_SC2_FIG2.png" width="604">
                                         </figure>
 
 
@@ -770,7 +770,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                     <p> <b>Water-Plane Area Coefficient</b> <br>
 
                                         <figure>
-                                            <img src="CP1_SC2_FIG3.png" width="604">
+                                            <img src="img/CP1_SC2_FIG3.png" width="604">
                                         </figure>
 
                                         The <span style="color:blue">Water-plane Area Coefficient/span> is defined as,
@@ -848,7 +848,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                     <p> <b>Block Coefficient</b> <br>
 
                                         <figure>
-                                            <img src="CP1_SC2_FIG4.png" width="604">
+                                            <img src="img/CP1_SC2_FIG4.png" width="604">
                                         </figure>
 
                                         The <span style="color:blue">Block Coefficient/span> is defined as,
@@ -994,7 +994,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
 
 
                                         <figure>
-                                            <img src="CP1_SC2_FIG6.png" width="904">
+                                            <img src="img/CP1_SC2_FIG6.png" width="904">
                                         </figure>
 
 
@@ -1078,7 +1078,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                     <p> <b>Equilibrium</b> <br>
 
                                         <figure>
-                                            <img src="CP1_SC3_FIG1.png" width="504">
+                                            <img src="img/CP1_SC3_FIG1.png" width="504">
                                         </figure>
 
                                         <span style="color:red">Principle of Archimedes</span> states that the <span
@@ -1832,7 +1832,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                             horizontal axis.</span>
 
                                         <figure>
-                                            <img src="CP1_SC5_FIG2.png" width="504">
+                                            <img src="img/CP1_SC5_FIG2.png" width="504">
                                         </figure>
                                     </p>
 
@@ -1904,7 +1904,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                         buoyancy</span> for its intended service. <br><br>
 
                                     <figure>
-                                        <img src="CP1_SC6_FIG1.png" width="504">
+                                        <img src="img/CP1_SC6_FIG1.png" width="504">
                                     </figure>
 
                                     It was introduced by <span style="color:blue">Samuel Plimsol</span> to <span
@@ -1963,7 +1963,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                         to float at <span style="color:green">different water conditions.</span>
 
                                         <figure>
-                                            <img src="CP1_SC6_FIG2.jpg" width="504">
+                                            <img src="img/CP1_SC6_FIG2.jpg" width="504">
                                         </figure>
                                     </p>
 
@@ -2019,7 +2019,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                         </div>
 
                                         <figure>
-                                            <img src="CP1_SC6_FIG3.png" width="504">
+                                            <img src="img/CP1_SC6_FIG3.png" width="504">
                                         </figure>
                                     </p>
 
@@ -2070,19 +2070,19 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
     <p class="common_size"> SCORE = </p>
     <input class="common_size" id="totScore" value="0"> </input>
 
-    <script src="CP1_general_script.js"></script>
-    <script src="CP1_SC1_MCQ.js"></script>
-    <script src="CP1_SC1_FIB.js"></script>
-    <script src="CP1_SC2_MCQ.js"></script>
-    <script src="CP1_SC2_FIB.js"></script>
-    <script src="CP1_SC3_MCQ.js"></script>
-    <script src="CP1_SC3_FIB.js"></script>
-    <script src="CP1_SC4_MCQ.js"></script>
-    <script src="CP1_SC4_FIB.js"></script>
-    <script src="CP1_SC5_MCQ.js"></script>
-    <script src="CP1_SC5_FIB.js"></script>
-    <script src="CP1_SC6_MCQ.js"></script>
-    <script src="CP1_SC6_FIB.js"></script>
+    <script src="js/CP1_general_script.js"></script>
+    <script src="qz/CP1_SC1_MCQ.js"></script>
+    <script src="qz/CP1_SC1_FIB.js"></script>
+    <script src="qz/CP1_SC2_MCQ.js"></script>
+    <script src="qz/CP1_SC2_FIB.js"></script>
+    <script src="qz/CP1_SC3_MCQ.js"></script>
+    <script src="qz/CP1_SC3_FIB.js"></script>
+    <script src="qz/CP1_SC4_MCQ.js"></script>
+    <script src="qz/CP1_SC4_FIB.js"></script>
+    <script src="qz/CP1_SC5_MCQ.js"></script>
+    <script src="qz/CP1_SC5_FIB.js"></script>
+    <script src="qz/CP1_SC6_MCQ.js"></script>
+    <script src="qz/CP1_SC6_FIB.js"></script>
     <!--<script src="FIB2.js"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
