--- a/MNO1109_Cp2.html
+++ b/MNO1109_Cp2.html
@@ -275,7 +275,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                             second moment of inertia of the ship</span>.
 
                                         <figure>
-                                            <img src="CP2_SC1_FIG1.png" width="50%" class="center">
+                                            <img src="img/CP2_SC1_FIG1.png" width="50%" class="center">
                                         </figure>
 
                                         It is to be noted that <span style="color:green;"> Simpson's
@@ -341,7 +341,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
 
 
                                         <figure>
-                                            <img src="CP2_SC1_FIG2.png" width="50%" class="center">
+                                            <img src="img/CP2_SC1_FIG2.png" width="50%" class="center">
                                         </figure>
                                         In the <span style="color:red;"> Simpson's 1st Rule</span>, the curve is
                                         assumed to be <span style="color:green;"> parabolic of the second
@@ -409,7 +409,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
 
 
                                         <figure>
-                                            <img src="CP2_SC1_FIG3.png" width="604" class="center">
+                                            <img src="img/CP2_SC1_FIG3.png" width="604" class="center">
                                         </figure>
                                         In the <span style="color:red;"> Simpson's 2nd Rule</span>, the curve is
                                         assumed to be a of the <span style="color:blue;"> third order</span>.
@@ -475,7 +475,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
 
 
                                         <figure>
-                                            <img src="CP2_SC1_FIG4.png" width="604" class="center">
+                                            <img src="img/CP2_SC1_FIG4.png" width="604" class="center">
                                         </figure>
                                         <span style="color:red;"> Simpson's 3rd Rule</span> is used to find area of an
                                         <span style="color:blue;"> irregular shape</span> often found at the
@@ -775,7 +775,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                     <p> <b>Center of Flotation</b>
 
                                         <figure>
-                                            <img src="CP2_SC3_FIG1.png" width="604" class="center">
+                                            <img src="img/CP2_SC3_FIG1.png" width="604" class="center">
                                         </figure>
                                         The <span style="color:red;"> centre of flotation </span> is defined as the
                                         <span style="color:blue;"> centre of the waterplane area</span> and can
@@ -959,13 +959,13 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
     <p class="common_size"> SCORE = </p>
     <input class="common_size" id="totScore" value="0"> </input>
 
-    <script src="CP2_general_script.js"></script>
-    <script src="CP2_SC1_MCQ.js"></script>
-    <script src="CP2_SC1_FIB.js"></script>
-    <script src="CP2_SC2_MCQ.js"></script>
-    <script src="CP2_SC2_FIB.js"></script>
-    <script src="CP2_SC3_MCQ.js"></script>
-    <script src="CP2_SC3_FIB.js"></script>
+    <script src="js/CP2_general_script.js"></script>
+    <script src="qz/CP2_SC1_MCQ.js"></script>
+    <script src="qz/CP2_SC1_FIB.js"></script>
+    <script src="qz/CP2_SC2_MCQ.js"></script>
+    <script src="qz/CP2_SC2_FIB.js"></script>
+    <script src="qz/CP2_SC3_MCQ.js"></script>
+    <script src="qz/CP2_SC3_FIB.js"></script>
     <!--<script src="FIB2.js"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
