--- a/MNO1109_Cp3.html
+++ b/MNO1109_Cp3.html
@@ -328,7 +328,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                             direction parallel</span>
                                         to the <span style="color:blue;">path of the shifted weight</span>.
                                         <figure>
-                                            <img src="CP3_SC1_FIG2.png" width="50%" class="center">
+                                            <img src="img/CP3_SC1_FIG2.png" width="50%" class="center">
                                         </figure>
 
                                         This will produced a <span style="color:blue;">listing moment <i>W x
@@ -402,7 +402,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
 
 
                                         <figure>
-                                            <img src="CP3_SC1_FIG3.png" width="50%" class="center">
+                                            <img src="img/CP3_SC1_FIG3.png" width="50%" class="center">
                                         </figure>
 
                                         Therefore it forms a <span style="color:blue;">triangle
@@ -570,7 +570,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                             style="color:green;">symmetrical</span> ship.
 
                                         <figure>
-                                            <img src="CP3_SC2_FIG1.png" width="604" class="center">
+                                            <img src="img/CP3_SC2_FIG1.png" width="604" class="center">
                                         </figure>
 
                                         The <span style="color:red;">CoG </span>for the <span style="color:green;">x-
@@ -785,7 +785,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
 
 
                                         <figure>
-                                            <img src="CP3_SC3_FIG1.png" width="604" class="center">
+                                            <img src="img/CP3_SC3_FIG1.png" width="604" class="center">
                                         </figure>
                                         <br><br><br><br>
                                     </p>
@@ -943,13 +943,13 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
     <p class="common_size"> SCORE = </p>
     <input class="common_size" id="totScore" value="0"> </input>
 
-    <script src="CP3_general_script.js"></script>
-    <script src="CP3_SC1_MCQ.js"></script>
-    <script src="CP3_SC1_FIB.js"></script>
-    <script src="CP3_SC2_MCQ.js"></script>
-    <script src="CP3_SC2_FIB.js"></script>
-    <script src="CP3_SC3_MCQ.js"></script>
-    <script src="CP3_SC3_FIB.js"></script>
+    <script src="js/CP3_general_script.js"></script>
+    <script src="qz/CP3_SC1_MCQ.js"></script>
+    <script src="qz/CP3_SC1_FIB.js"></script>
+    <script src="qz/CP3_SC2_MCQ.js"></script>
+    <script src="qz/CP3_SC2_FIB.js"></script>
+    <script src="qz/CP3_SC3_MCQ.js"></script>
+    <script src="qz/CP3_SC3_FIB.js"></script>
 
     <!--<script src="FIB2.js"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
