--- a/MNO1109_Cp4.html
+++ b/MNO1109_Cp4.html
@@ -259,7 +259,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                     <p> <b>Symbols</b>
 
                                         <figure>
-                                            <img src="CP4_SC1_FIG1.png" width="30%" class="center">
+                                            <img src="img/CP4_SC1_FIG1.png" width="30%" class="center">
                                         </figure>
                                         Referring to the figure, <span style="color:red;">KG</span> is the <span
                                             style="color:blue;">Vertical Center of Gravity (VCG)</span> of ship.
@@ -339,7 +339,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                         <br><br>
 
                                         <figure>
-                                            <img src="CP4_SC1_FIG2.png" width="30%" class="center">
+                                            <img src="img/CP4_SC1_FIG2.png" width="30%" class="center">
                                         </figure>
 
                                         <strong>Remember</strong> that the <span style="color:red;">force of
@@ -419,7 +419,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                             Stability at a Small Angle of Heel</b>
 
                                         <figure>
-                                            <img src="CP4_SC1_FIG2.png" width="30%" class="center">
+                                            <img src="img/CP4_SC1_FIG2.png" width="30%" class="center">
                                         </figure>
                                         At <span style="color:blue;">small angle of heel (lesser than 15deg)</span>, the
                                         <span style="color:blue;">forces of buoyancy</span> may be
@@ -507,7 +507,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                         is
                                         given here.<br><br>
                                         <figure>
-                                            <img src="CP4_SC1_FIG4.png" width="70%" class="center">
+                                            <img src="img/CP4_SC1_FIG4.png" width="70%" class="center">
                                         </figure>
 
                                         <strong>Heel</strong>: A ship is said to be heeled when
@@ -593,7 +593,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                             downwards</span> through this point.
 
                                         <figure>
-                                            <img src="CP4_SC1_FIG5_2.png" width="604" class="center">
+                                            <img src="img/CP4_SC1_FIG5_2.png" width="604" class="center">
                                         </figure>
 
                                         As a result, <span style="color:blue;">CoB</span> must shift from <span
@@ -657,7 +657,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
 
                                     <p> <b>Effect of Suspended Weight</b>
                                         <figure>
-                                            <img src="CP4_SC1_FIG6.png" width="60%" class="center">
+                                            <img src="img/CP4_SC1_FIG6.png" width="60%" class="center">
                                         </figure>
                                         Consider the CoG of a <span style="color:red;">weight suspended</span> from the
                                         <span style="color:blue;">head of a derrick</span>.<br><br>
@@ -752,7 +752,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
 
                                     <p> <b>Stable Equilibrium</b>
                                         <figure>
-                                            <img src="CP4_SC2_FIG1.png" width="30%" class="center">
+                                            <img src="img/CP4_SC2_FIG1.png" width="30%" class="center">
                                         </figure>
                                         When a ship is in <span style="color:blue;">stable equilibrium</span>, she tends
                                         to return to the <span style="color:green;">initial
@@ -812,7 +812,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
 
                                     <p> <b>Unstable Equilibrium</b>
                                         <figure>
-                                            <img src="CP4_SC2_FIG2.png" width="50%" class="center">
+                                            <img src="img/CP4_SC2_FIG2.png" width="50%" class="center">
                                         </figure>
 
                                         For <span style="color:blue;">GM lesser than 0</span>, the ship is said to be in
@@ -863,7 +863,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
 
                                     <p> <b>Neutral Equilibrium</b>
                                         <figure>
-                                            <img src="CP4_SC2_FIG3.png" width="604" class="center">
+                                            <img src="img/CP4_SC2_FIG3.png" width="604" class="center">
                                         </figure>
 
                                         If <span style="color:blue;">GM = 0</span>, the ship is in <span
@@ -943,7 +943,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                             position</span>).<br><br>
 
                                         <figure>
-                                            <img src="CP4_SC2_FIG4.png" width="50%" class="center">
+                                            <img src="img/CP4_SC2_FIG4.png" width="50%" class="center">
                                         </figure>
 
                                         The ship is said to be <span style="color:red;">stiff </span>when the GM is
@@ -1069,7 +1069,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                         below:<br>
 
                                         <figure>
-                                            <img src="CP4_SC2_FIG6.png" width="100%" class="center">
+                                            <img src="img/CP4_SC2_FIG6.png" width="100%" class="center">
                                         </figure>
 
                                         <br><br><br><br>
@@ -1246,15 +1246,15 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
     <p class="common_size"> SCORE = </p>
     <input class="common_size" id="totScore" value="0"> </input>
 
-    <script src="CP4_general_script.js"></script>
-    <script src="CP4_SC1_MCQ.js"></script>
-    <script src="CP4_SC1_FIB.js"></script>
-    <script src="CP4_SC2_MCQ.js"></script>
-    <script src="CP4_SC2_FIB.js"></script>
-    <script src="CP4_SC3_MCQ.js"></script>
-    <script src="CP4_SC3_FIB.js"></script>
-    <script src="CP4_SC4_MCQ.js"></script>
-    <script src="CP4_SC4_FIB.js"></script>
+    <script src="js/CP4_general_script.js"></script>
+    <script src="qz/CP4_SC1_MCQ.js"></script>
+    <script src="qz/CP4_SC1_FIB.js"></script>
+    <script src="qz/CP4_SC2_MCQ.js"></script>
+    <script src="qz/CP4_SC2_FIB.js"></script>
+    <script src="qz/CP4_SC3_MCQ.js"></script>
+    <script src="qz/CP4_SC3_FIB.js"></script>
+    <script src="qz/CP4_SC4_MCQ.js"></script>
+    <script src="qz/CP4_SC4_FIB.js"></script>
 
     <!--<script src="FIB2.js"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
