--- a/MNO1109_Cp5.html
+++ b/MNO1109_Cp5.html
@@ -344,7 +344,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                     <p> <b>General</b>
 
                                         <figure>
-                                            <img src="CP5_SC2_FIG1.png" width="404" class="center">
+                                            <img src="img/CP5_SC2_FIG1.png" width="404" class="center">
                                         </figure>
 
                                         When a ship such as tanker and LNG is <span style="color:blue">carrying
@@ -414,7 +414,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                             bulkheads</span>.
 
                                         <figure>
-                                            <img src="CP5_SC2_FIG2.png" width="30%" class="center">
+                                            <img src="img/CP5_SC2_FIG2.png" width="30%" class="center">
                                         </figure>
 
                                         The <span style="color:green">divisional bulkhead</span> is able to
@@ -502,7 +502,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
 
                                     <p><b>General(1)</b></p>
                                     <figure>
-                                        <img src="CP5_SC3_FIG1.png" width="30%" class="center">
+                                        <img src="img/CP5_SC3_FIG1.png" width="30%" class="center">
                                     </figure>
 
                                     If a <span style="color:blue;">compartment</span> in the ship below the <span
@@ -562,7 +562,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
 
 
                                         <figure>
-                                            <img src="CP5_SC3_FIG2.png" width="50%" class="center">
+                                            <img src="img/CP5_SC3_FIG2.png" width="50%" class="center">
                                         </figure>
 
 
@@ -655,7 +655,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                         mu are as follows
 
                                         <figure>
-                                            <img src="CP5_SC3_FIG3.png" width="100%" class="center">
+                                            <img src="img/CP5_SC3_FIG3.png" width="100%" class="center">
                                         </figure>
 
                                         Therefore, a <span style="color:blue;">higher value of permeability</span> for a
@@ -840,11 +840,11 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
     <p class="common_size"> SCORE = </p>
     <input class="common_size" id="totScore" value="0"> </input>
 
-    <script src="CP5_general_script.js"></script>
-    <script src="CP5_SC1_MCQ.js"></script>
-    <script src="CP5_SC2_MCQ.js"></script>
-    <script src="CP5_SC3_MCQ.js"></script>
-    <script src="CP5_SC3_FIB.js"></script>
+    <script src="jz/CP5_general_script.js"></script>
+    <script src="qz/CP5_SC1_MCQ.js"></script>
+    <script src="qz/CP5_SC2_MCQ.js"></script>
+    <script src="qz/CP5_SC3_MCQ.js"></script>
+    <script src="qz/CP5_SC3_FIB.js"></script>
 
     <!--<script src="FIB2.js"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
