--- a/MNO1109_Cp6.html
+++ b/MNO1109_Cp6.html
@@ -274,7 +274,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                             metacenter (M)</span>.<br>
 
                                         <figure>
-                                            <img src="CP6_SC1_FIG1.png" width="404">
+                                            <img src="img/CP6_SC1_FIG1.png" width="404">
                                         </figure>
 
                                         In such case, the CoB has
@@ -348,7 +348,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
 
                                     <p> <b>GZ Cross Curves of Stability</b></p>
                                     <figure>
-                                        <img src="CP6_SC1_FIG2.png" width="904" class="center">
+                                        <img src="img/CP6_SC1_FIG2.png" width="904" class="center">
                                     </figure>
 
                                     <span style="color:red">GZ cross curves of stability</span> are <span
@@ -414,7 +414,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                         curves</span>. <br>
 
                                     <figure class="image_position">
-                                        <img src="CP6_SC1_FIG3.png" width="604">
+                                        <img src="img/CP6_SC1_FIG3.png" width="604">
                                     </figure>
 
                                     <span style="color:red">KN Curves</span> are used as it is <span
@@ -480,9 +480,9 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
     <p class="common_size"> SCORE = </p>
     <input class="common_size" id="totScore" value="0"> </input>
 
-    <script src="CP6_general_script.js"></script>
-    <script src="CP6_SC1_MCQ.js"></script>
-    <script src="CP6_SC1_FIB.js"></script>
+    <script src="js/CP6_general_script.js"></script>
+    <script src="qz/CP6_SC1_MCQ.js"></script>
+    <script src="qz/CP6_SC1_FIB.js"></script>
 
     <!--<script src="FIB2.js"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
