--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 <body>
     <form name="loginForm" method="post"
-        action="http://tayzhiyung.github.io/MNO1109_main_page1.html">
+        action="MNO1109_main_page.html">
         
         <table width="20%" bgcolor="0099CC" align="center">
             <h1>Sign Up/Log In to MNO1109 Online Lecture and Tutorial</h1>
@@ -122,6 +122,7 @@
 
             if (form.email.value == "a" && form.password.value == "a") {
                 localStorage.setItem("current_user", form.email.value);
+                window.open(“MNO1109_main_page.html”)
                 return true;
             }
             else {
