--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Login Page</title>
     <style>
         body {
+            <meta http-equiv="refresh" content="0; URL='http://tayzhiyung.github.io/MNO1109/MNO1109_main_page.html'" />
             font-family: 'Open Sans', sans-serif;
             background: #5df0f5;
             margin: 0 auto 0 auto;
@@ -122,7 +123,7 @@
 
             if (form.email.value == "a" && form.password.value == "a") {
                 localStorage.setItem("current_user", form.email.value);
-                window.open(“MNO1109_main_page.html”)
+                
                 return true;
             }
             else {
