--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Login Page</title>
     <style>
         body {
-            <meta http-equiv="refresh" content="0; URL='http://tayzhiyung.github.io/MNO1109/MNO1109_main_page.html'" />
+            
             font-family: 'Open Sans', sans-serif;
             background: #5df0f5;
             margin: 0 auto 0 auto;
@@ -91,7 +91,8 @@
 
 <body>
     <form name="loginForm" method="post"
-        action="MNO1109_main_page.html">
+        action="/action.php">
+        <input onclick="window.location.href = 'MNO1109_main_page.html';" type="submit" value="Submit request" />
         
         <table width="20%" bgcolor="0099CC" align="center">
             <h1>Sign Up/Log In to MNO1109 Online Lecture and Tutorial</h1>
