--- a/index.html
+++ b/index.html
@@ -91,9 +91,8 @@
 
 <body>
     <form name="loginForm" method="post"
-        action="/action.php">
-        <input onclick="window.location.href = 'MNO1109_main_page.html';" type="submit" value="Submit request" />
-        
+        action="/MNO1109_main_page.html">
+               
         <table width="20%" bgcolor="0099CC" align="center">
             <h1>Sign Up/Log In to MNO1109 Online Lecture and Tutorial</h1>
 
