--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 </head>
 
 <body>
-    <form name="loginForm" method="post" action="window.location.href ='MNO1109_main_page.html'">
+    <form name="loginForm" method="post" onclick="window.location.href ='MNO1109_main_page.html'">
                
         <table width="20%" bgcolor="0099CC" align="center">
             <h1>Sign Up/Log In to MNO1109 Online Lecture and Tutorial</h1>
