--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 </head>
 
 <body>
-    <form name="loginForm" method="post" action="/action_page.php">
+    <form name="loginForm" method="post" action="MNO1109_data_base.php">
                
         <table width="20%" bgcolor="0099CC" align="center">
             <h1>Sign Up/Log In to MNO1109 Online Lecture and Tutorial</h1>
